updating to latest version

--- a/index.html
+++ b/index.html
@@ -3,12 +3,11 @@
 <html lang="en">
     <head>
         <meta charset="utf-8" />
-        <title></title>
+        <title>Dollary Bill test page</title>
     </head>
     <body>
         
-
+        <script src="js/libs/dollarbill.min.js"></script>
         <script src="js/debug/backpack.js"></script>
-        <script src="js/libs/mbp.js"></script>
     </body>
 </html>
