--- a/js/specs/backpack.core.html
+++ b/js/specs/backpack.core.html
@@ -1,17 +1,17 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
     <head>
         <meta charset="utf-8" />
         <title>Core Dollar Bill Unit Tests</title>
 
-        <script src="../jquery.min.js"></script>
-        <script src="../qunit.js" type="text/javascript"></script>
-        <script src="../beautify-html.js" type="text/javascript"></script>
-        <script src="../sinon.js" type="text/javascript"></script>
-        <script src="../../debug/backpack.js" type="text/javascript"></script>
+        <script src="../tests/jquery.min.js"></script>
+        <script src="../tests/qunit.js" type="text/javascript"></script>
+        <script src="../tests/beautify-html.js" type="text/javascript"></script>
+        <script src="../tests/sinon.js" type="text/javascript"></script>
+        <script src="../dev/backpack.js" type="text/javascript"></script>
         <script src="backpack.core.Tests.js" type="text/javascript"></script>
         
-        <link rel="stylesheet" href="../qunit.css" type="text/css" media="screen" />
+        <link rel="stylesheet" href="../tests/qunit.css" type="text/css" media="screen" />
 
         <style>
 
