--- a/js/specs/parseViewInfo.html
+++ b/js/specs/parseViewInfo.html
@@ -9,7 +9,7 @@
     <script src="../tests/beautify-html.js" type="text/javascript"></script>
     <script src="../tests/sinon.js" type="text/javascript"></script>
     <script src="../dev/backpack.js" type="text/javascript"></script>
-    <script src="parseViewInfo.tests.js" type="text/javascript"></script>
+    <script src="parseViewInfo.test.js" type="text/javascript"></script>
 
     <link rel="stylesheet" href="../tests/qunit.css" type="text/css" media="screen" />
 
@@ -36,6 +36,12 @@
             height: 100px;
             width: 100px;
         }
+
+        
+        .content-pane{
+            display:none;
+        }
+
     </style>
 
 </head>
@@ -54,6 +60,12 @@
             <section class="operation-body"></section>
         </div>
     </div>
+
+    <section id="realView" class="content-pane"
+             spa-title="realView"
+             spa-transition="slide"
+             spa-route="realroute\:id"></section>
+
 
     <script type="text/javascript">
             jQuery(document)
